# sports-etl-scripts

./: .dockerignore  .gitignore  Dockerfile  build_retrosheet.py  dbt_project.yml  docker-compose.yml  main.py  packages.yml  prefect.yaml  profiles.yml  pyproject.toml  query.prql  selectors.yml  update_mlbam_pbp.py  update_statcast.py
.github/workflows/: deploy.yml
api_clients/: __init__.py  base.py
api_clients/mlb/: __init__.py  client.py
dbt/analyses/: batting_stats_custom_period.sql  pitching_stats_custom_period.sql
dbt/macros/: get_season_year.sql  pbp_rate_stats.sql  set_duckdb_force_execution.sql
dbt/models/: _sources.generated.yml  _sources.yml
dbt/models/marts/: _marts.yml  _pbp_marts.yml  abs_challenges.sql  batting_splits_season.sql  batting_stats_monthly.sql  batting_stats_season.sql  current_season_batting_stats.sql  current_season_pitching_stats.sql  daily_game_coverage.sql  game_coverage.sql  (+5 more)
docs/: dbt.md  lineage.md  mlbam_pbp.md  orchestration.md  retrosheet.md
etl_scripts/: __init__.py  db.py  dbt_runner.py  materialized_views.py  mlb_schedule.py  mlbam_pbp.py  prefect_runtime.py  retrosheet.py  seed_local_duckdb.py  statcast.py  statcast_backfill.py  statcast_extra.py  validate_local_pipeline.py
flows/: dbt_flow.py  materialized_views_flow.py  mlb_schedule_flow.py  mlbam_pbp_flow.py  retrosheet_flow.py  statcast_backfill_flow.py  statcast_extra_flow.py  statcast_flow.py
models/: mlb_schedule.py  savant_gamefeed.py
scripts/: docker_deploy.sh  generate_dbt_sources.sh  load_park_factors.py  parse_database_url.sh  prefect_bootstrap.sh
(+6 files in other folders)
