[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etl-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adbc-driver-postgresql>=1.11.0",
    "duckdb>=1.5.0",
    "loguru>=0.7.3",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "prefect>=3.1.0",
    "psycopg2-binary>=2.9.12",
    "pybaseball>=2.2.7",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.49",
    "typer>=0.25.0",
]

[project.optional-dependencies]
dbt = [
    "dbt-core>=1.9.0,<2.0.0",
    "dbt-postgres>=1.9.0,<2.0.0",
    "dbt-duckdb>=1.9.0,<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["etl_scripts", "models", "api_clients"]
